build(packaging): 使用moditect给非模块化依赖库添加模块信息